--- a/SoftPipeLine/SoftPipeLine.vcxproj
+++ b/SoftPipeLine/SoftPipeLine.vcxproj
@@ -21,10 +21,12 @@
   <ItemGroup>
     <ClCompile Include="FrameWork\Engine.cpp" />
     <ClCompile Include="FrameWork\Main.cpp" />
+    <ClCompile Include="FrameWork\RenderDevice.cpp" />
     <ClCompile Include="FrameWork\WinApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrameWork\Engine.h" />
+    <ClInclude Include="FrameWork\RenderDevice.h" />
     <ClInclude Include="FrameWork\WinApp.h" />
     <ClInclude Include="Util\Singleton.h" />
   </ItemGroup>
