--- a/SoftPipeLine/SoftPipeLine.vcxproj.filters
+++ b/SoftPipeLine/SoftPipeLine.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="FrameWork\WinApp.cpp">
       <Filter>FrameWork·</Filter>
     </ClCompile>
+    <ClCompile Include="FrameWork\RenderDevice.cpp">
+      <Filter>FrameWork·</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrameWork\Engine.h">
@@ -28,6 +31,9 @@
     </ClInclude>
     <ClInclude Include="Util\Singleton.h">
       <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork\RenderDevice.h">
+      <Filter>FrameWork·</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
