--- a/SoftPipeLine/SoftPipeLine.vcxproj
+++ b/SoftPipeLine/SoftPipeLine.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Math\Vector2.cpp" />
     <ClCompile Include="Math\Vector3.cpp" />
     <ClCompile Include="Math\Vector4.cpp" />
+    <ClCompile Include="RenderCore\Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrameWork\Engine.h" />
@@ -38,6 +39,7 @@
     <ClInclude Include="Math\Vector2.h" />
     <ClInclude Include="Math\Vector3.h" />
     <ClInclude Include="Math\Vector4.h" />
+    <ClInclude Include="RenderCore\Camera.h" />
     <ClInclude Include="Util\Singleton.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
