--- a/SoftPipeLine/SoftPipeLine.vcxproj
+++ b/SoftPipeLine/SoftPipeLine.vcxproj
@@ -31,6 +31,8 @@
     <ClCompile Include="RenderCore\Camera.cpp" />
     <ClCompile Include="RenderCore\PipeLine.cpp" />
     <ClCompile Include="RenderCore\RenderFace.cpp" />
+    <ClCompile Include="RenderCore\RenderUtil.cpp" />
+    <ClCompile Include="RenderCore\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrameWork\Engine.h" />
@@ -44,6 +46,8 @@
     <ClInclude Include="RenderCore\Camera.h" />
     <ClInclude Include="RenderCore\PipeLine.h" />
     <ClInclude Include="RenderCore\RenderFace.h" />
+    <ClInclude Include="RenderCore\RenderUtil.h" />
+    <ClInclude Include="RenderCore\Texture.h" />
     <ClInclude Include="Util\Singleton.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
