--- a/Tutorial2-Line-Generation/Tutorial2-Line-Generation.vcxproj
+++ b/Tutorial2-Line-Generation/Tutorial2-Line-Generation.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{7FF7F4D7-7B7B-4138-8CF1-60F4B8150A2D}</ProjectGuid>
     <RootNamespace>Tutorial2LineGeneration</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>Line-Generation</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -86,6 +87,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>d2d1.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
