--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ Render-PipeLine/Debug/Render-PipeLine.Build.CppClean.log
 Render-PipeLine/Debug/Render-PipeLine.log
 Tutorial1-Framework/Debug/Tutorial1-Framework.log
 Tutorial1-Framework/Debug/Tutorial1-Framework.Build.CppClean.log
+*.log
