--- a/Scene/Scene.vcxproj
+++ b/Scene/Scene.vcxproj
@@ -30,7 +30,7 @@
     <ProjectGuid>{7FF7F4D7-7B7B-4138-8CF1-60F4B8150A2D}</ProjectGuid>
     <RootNamespace>Tutorial2LineGeneration</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
-    <ProjectName>LineGeneration</ProjectName>
+    <ProjectName>Scene</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
