--- a/RenderPipeLine/RenderPipeLine.vcxproj
+++ b/RenderPipeLine/RenderPipeLine.vcxproj
@@ -123,12 +123,18 @@
   <ItemGroup>
     <ClInclude Include="Framework\RenderDevice.h" />
     <ClInclude Include="Framework\WinApp.h" />
+    <ClInclude Include="Mathematics\Float2.h" />
+    <ClInclude Include="Mathematics\Float3.h" />
+    <ClInclude Include="Mathematics\Float4.h" />
     <ClInclude Include="Utility\PipeLineUtility.h" />
     <ClInclude Include="Utility\Singleton.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\RenderDevice.cpp" />
     <ClCompile Include="Framework\WinApp.cpp" />
+    <ClCompile Include="Mathematics\Float2.cpp" />
+    <ClCompile Include="Mathematics\Float3.cpp" />
+    <ClCompile Include="Mathematics\Float4.cpp" />
     <ClCompile Include="Utility\PipeLineUtility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
