--- a/RenderPipeLine/RenderPipeLine.vcxproj
+++ b/RenderPipeLine/RenderPipeLine.vcxproj
@@ -71,7 +71,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <TargetExt>.lib</TargetExt>
-    <OutDir>$(SolutionDir)\Library</OutDir>
+    <OutDir>$(SolutionDir)\Library\</OutDir>
     <TargetName>renderengine</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
