--- a/RenderPipeLine/RenderPipeLine.vcxproj
+++ b/RenderPipeLine/RenderPipeLine.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Mathematics\MathUtil.h" />
     <ClInclude Include="Mathematics\Matrix.h" />
     <ClInclude Include="Utility\PipeLineUtility.h" />
+    <ClInclude Include="Utility\RenderBuffer.h" />
     <ClInclude Include="Utility\Singleton.h" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +143,7 @@
     <ClCompile Include="Mathematics\MathUtil.cpp" />
     <ClCompile Include="Mathematics\Matrix.cpp" />
     <ClCompile Include="Utility\PipeLineUtility.cpp" />
+    <ClCompile Include="Utility\RenderBuffer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
