--- a/RenderPipeLine/RenderPipeLine.vcxproj
+++ b/RenderPipeLine/RenderPipeLine.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="Mathematics\Float2.h" />
     <ClInclude Include="Mathematics\Float3.h" />
     <ClInclude Include="Mathematics\Float4.h" />
+    <ClInclude Include="Mathematics\Int2.h" />
     <ClInclude Include="Mathematics\MathUtil.h" />
     <ClInclude Include="Mathematics\Matrix.h" />
     <ClInclude Include="Utility\PipeLineUtility.h" />
@@ -141,6 +142,7 @@
     <ClCompile Include="Mathematics\Float2.cpp" />
     <ClCompile Include="Mathematics\Float3.cpp" />
     <ClCompile Include="Mathematics\Float4.cpp" />
+    <ClCompile Include="Mathematics\Int2.cpp" />
     <ClCompile Include="Mathematics\MathUtil.cpp" />
     <ClCompile Include="Mathematics\Matrix.cpp" />
     <ClCompile Include="Utility\PipeLineUtility.cpp" />
