--- a/Scene/Scene.vcxproj
+++ b/Scene/Scene.vcxproj
@@ -88,6 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>FBXSDK_SHARED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>d2d1.lib;dxguid.lib;renderengine.lib;libfbxsdk.lib;%(AdditionalDependencies)</AdditionalDependencies>
