--- a/RenderPipeLine/RenderPipeLine.vcxproj
+++ b/RenderPipeLine/RenderPipeLine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Utility\RenderBuffer.h" />
     <ClInclude Include="Utility\RenderContext.h" />
     <ClInclude Include="Utility\Singleton.h" />
+    <ClInclude Include="Utility\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\Camera.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="Utility\PipeLineUtility.cpp" />
     <ClCompile Include="Utility\RenderBuffer.cpp" />
     <ClCompile Include="Utility\RenderContext.cpp" />
+    <ClCompile Include="Utility\Texture.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
