--- a/RenderPipeLine/RenderPipeLine.vcxproj.filters
+++ b/RenderPipeLine/RenderPipeLine.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="Utility\Material.h">
       <Filter>Header Files\Utility</Filter>
     </ClInclude>
+    <ClInclude Include="Utility\Texture.h">
+      <Filter>Header Files\Utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\RenderDevice.cpp">
@@ -108,6 +111,9 @@
     </ClCompile>
     <ClCompile Include="Mathematics\Int2.cpp">
       <Filter>Source Files\Mathematics</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility\Texture.cpp">
+      <Filter>Source Files\Utility</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
